syntax = "proto3";

import "types.proto";

package valorem.trade.v1;

/** Services and messages enabling EIP-4361 authentication via gRPC. */

/** Reference: https://docs.login.xyz/ */

service Auth {
  /** Returns an EIP-4361 nonce for session and invalidates existing session*/
  rpc Nonce (Empty) returns (NonceText);

  /** Verifies the SignedMessage is valid and returns the verified address*/
  rpc Verify (VerifyText) returns (H160);

  /** Used to check if a given connection is authenticated, returns the address which is authenticated for a nonce cookie*/
  rpc Authenticate (Empty) returns (H160);

  /** Returns the SIWE Session for the request's sessionId */
  rpc Session (Empty) returns (SiweSession);

  /** Invalidates the session for the request's sessionId */
  rpc SignOut (Empty) returns (Empty);
}

/** Nonce response message containing the generated `nonce` string. */
message NonceText {
  string nonce = 1;
}

/** TODO(Should be Signed Message, and does it need to be json encoded in protobuf?) */
/** Verify request message containing an JSON encoded string of the `SignedMessage` structure (src/auth). */
message VerifyText {
  string body = 1;
}

/** The object representing a valid/authenticated sid */
message SiweSession {
  H160 address = 1;
  H256 chain_id = 2;
}